--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Etch A Sketch</title>
 </head>
 <body>
+    <div id="grid-setup">
+        <h3>Please select a size comprised between 1 and 100</h3>
+
+        <div id="size-selector">
+            <input id="grid-size" type="number" min="1" max="100" value="1">
+
+            <button id="create-grid">Create grid</button>
+        </div>
+    </div>
+
     <div id="container"></div>
 
     <script src="js/main.js"></script>
