Add h1 and edit h3 to h4

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Etch A Sketch</title>
 </head>
 <body>
+    <h1>Sketch Pad</h1>
+
     <div id="grid-setup">
-        <h3>Please select a size comprised between 1 and 100</h3>
+        <h4>Please select a size comprised between 1 and 100</h4>
 
         <div id="size-selector">
             <input id="grid-size" type="number" min="1" max="100" value="1">
